# programming-massively-parallel-processors

./: CMakeLists.txt  README.md
exercises/: chapter2.md
exercises/chapter3/: mat_mul.cu
exercises/chapter4/: chapter4.md  mat_mul.cu
exercises/chapter5/: chapter5.md
